--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,9 +12,9 @@ ssh_server_host_keys:
   - /etc/ssh/ssh_host_dsa_key
   - /etc/ssh/ssh_host_ecdsa_key
   - "{{ '/etc/ssh/ssh_host_ed25519_key' if (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('14.04', '>=') or ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('8.0', '>=')) else '' }}"
-ssh_server_server_key_bits: "{{ 1024 if (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('14.04', '>=') or ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('8.0', '>=')) else 768 }}"
+#ssh_server_server_key_bits: "{{ 1024 if (ansible_distribution == 'Ubuntu' and ansible_distribution_version | version_compare('14.04', '>=') or ansible_distribution == 'Debian' and ansible_distribution_version | version_compare('8.0', '>=')) else 768 }}"
 ssh_server_use_privilege_separation: true
-ssh_server_key_regeneration_interval: 3600
+#ssh_server_key_regeneration_interval: 3600
 ssh_server_syslog_facility: AUTH
 ssh_server_log_level: INFO
 ssh_server_login_grace_time: 120
